# dajngo_19.2

./: .gitignore  data.json  products.json  prvt.json  prvt_example.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_views_count.py  0003_alter_blogpost_is_published_alter_blogpost_slug.py
blog/templates/blog/: test.html  test2.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_category_created_at_and_more.py  0002_category_created_at.py  0003_version.py  0004_product_creator.py  0005_product_is_published.py  0006_alter_product_is_published.py
catalog/templates/catalog/: also_main_page.html  base.html  catalog.html  contacts.html  main.html  main_page.html  product_confirm_delete.html  product_create.html  product_detail_view.html  product_form.html  product_update_prohibited.html  я не знаю зачем мне нужно было делать этот макет.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: blogpost_fixture.json
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_user_rand_key.py
users/templates/users/: email_confirmation_failed.html  email_confirmation_sent.html  email_confirmed.html  login.html  register.html  reset_password.html  reset_password_done.html  reset_password_failed.html  user_form.html
(+1 files in other folders)
